# parlez-deepl

./: .gitignore  main.py  pyproject.toml
.github/workflows/: main.yml  pr.yml  release.yml
src/parlez_deepl/: __init__.py  cli.py  client.py
tests/: test_client.py
