[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parlez_deepl"]

[project]
name = "parlez-deepl"
version = "0.1.0"
description = "Minimal DeepL API SDK and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]

[project.scripts]
parlez-deepl = "parlez_deepl.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
